# PaimonRenderer

./: .gitignore  CMakeLists.txt  README.md
assets/paimon/: paimon.mtl
shader/: back_outline.fs  back_outline.vs  blinn_phong.fs  shadow_mapping.fs  skybox.vs
src/: ModleFromProgram.h  camera.h  global.h  main.cpp  mesh.h  model.h  shader.h  skybox.h  texture.h  vertex.h
